update escher project page

--- a/proj_escher_tile.html
+++ b/proj_escher_tile.html
@@ -105,27 +105,132 @@
             <span class="author-block"><sup>2</sup>Adobe Research</span>
           </div>
 
+
           <div class="is-size-5 has-text-centered" style="margin-top: 0.5rem;">
-            <strong>SIGGRAPH 2025</strong>
+            <strong>SIGGRAPH 2025</strong><br>
+            <small>🏆 Featured as 
+              <a href="https://s2025.conference-schedule.org/presentation/?id=misc_210&sess=sess592" 
+                target="_blank" 
+                style="color: #3273dc; text-decoration: none;">
+                Technical Paper for Emerging Technologies
+              </a>
+            </small>
           </div>
+
+          <!-- <div class="is-size-5 has-text-centered" style="margin-top: 0.5rem;">
+            <strong>SIGGRAPH 2025</strong> <span style="font-size: 1rem;"></span><br>
+            <small>🏆 Featured as 
+              <a href="https://s2025.conference-schedule.org/presentation/?id=misc_210&sess=sess592" target="_blank">
+                Technical Paper for Emerging Technologies
+              </a>
+            </small>
+          </div> -->
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link -->
-              <span class="link-block">
+
+              <!-- paper Link -->
+              <!-- <span class="link-block">
+                <a href="https://dl.acm.org/doi/10.1145/3721238.3730681" class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                  <span>Paper</span>
+                </a>
+              </span> -->
+
+              <!-- arXiv Link -->
+              <!-- <span class="link-block">
                 <a href="https://arxiv.org/pdf/2506.23388" class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                  <span>arXiv</span>
+                </a>
+              </span> -->
+
+              <!-- Code -->
+               <!-- <span class="link-block">
+                <a href="https://github.com/Nowwin/escher-tile-deformer-examples/tree/main" class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon"><i class="fab fa-github"></i></span>
+                  <span>Example Code</span>
+                </a>
+              </span> -->
+
+              <!-- Poster -->
+               <!-- <span class="link-block">
+                <a href="./files/escher_tile_poster.pdf" class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                  <span>Poster</span>
+                </a>
+              </span> -->
+
+              <!-- Slides Coming Soon -->
+              <!-- <span class="link-block">
+                <a class="external-link button is-normal is-rounded is-dark" 
+                  style="pointer-events:none; opacity:0.5;">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                  <span>Slides (Coming Soon)</span>
+                </a>
+              </span> -->
+
+              <!-- Library Coming Soon -->
+              <!-- <span class="link-block">
+                <a class="external-link button is-normal is-rounded is-dark" 
+                  style="pointer-events:none; opacity:0.5;">
+                  <span class="icon"><i class="fab fa-github"></i></span>
+                  <span>Library (Coming Soon)</span>
+                </a>
+              </span> -->
+
+
+              <div style="display: flex; gap: 10px; flex-wrap: nowrap; flex-direction: row;">
+              <!-- Paper -->
+              <span class="link-block">
+                <a href="paper.pdf" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="fas fa-file-pdf"></i></span>
                   <span>Paper</span>
                 </a>
               </span>
 
-              <!-- Code Coming Soon -->
+              <!-- arXiv -->
               <span class="link-block">
-                <a class="external-link button is-normal is-rounded is-light" style="pointer-events:none;opacity:1.0;">
-                  <span class="icon"><i class="fab fa-github"></i></span>
-                  <span>Code (Coming Soon)</span>
+                <a href="https://arxiv.org" class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                  <span>arXiv</span>
                 </a>
               </span>
+
+              <!-- Example Code -->
+              <span class="link-block">
+                <a href="https://example.com" class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon"><i class="fab fa-github"></i></span>
+                  <span>Example Code</span>
+                </a>
+              </span>
+
+              <!-- Poster -->
+              <span class="link-block">
+                <a href="./files/escher_tile_poster.pdf" class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                  <span>Poster</span>
+                </a>
+              </span>
+
+              <!-- Slides Coming Soon -->
+              <span class="link-block">
+                <a class="external-link button is-normal is-rounded is-dark" style="pointer-events:none; opacity:0.5;">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                  <span>Slides (Coming Soon)</span>
+                </a>
+              </span>
+
+              <!-- Library Coming Soon -->
+              <span class="link-block">
+                <a class="external-link button is-normal is-rounded is-dark" style="pointer-events:none; opacity:0.5;">
+                  <span class="icon"><i class="fab fa-github"></i></span>
+                  <span>Library (Coming Soon)</span>
+                </a>
+              </span>
+            </div>
+
+
             </div>
           </div>
         </div>
@@ -327,8 +432,6 @@
 </section>
 
 
-
-
 <!-- Acknowledgments -->
 <div class="columns is-centered has-text-centered">
   <div class="column is-four-fifths">
@@ -339,9 +442,9 @@
         <a href="https://noamaig.github.io/" target="_blank">Noam Aigerman</a> and 
         <a href="https://imagine.enpc.fr/~groueixt/" target="_blank">Thibault Groueix</a> 
         for their insightful discussions during the early stages of this project. 
-        We thank Abhijeet Chowdhury and Taiwei Cui for their help in improving the GUI. 
+        We thank <a href="https://www.linkedin.com/in/abhichowdhury12/" target="_blank">Abhijeet Chowdhury</a> for helping accelerate the C++ implementation for ETech demo and Taiwei Cui for the help in improving the GUI. 
         We also appreciate 
-        <a href="https://www.danbgoldman.com/home/" target="_blank">Dan B Goldman</a>, 
+        <a href="https://www.danbgoldman.com/home/" target="_blank">Dan B Goldman</a> and
         <a href="https://cs.stanford.edu/~asuter/" target="_blank">Alex Suter</a> for feedback on the manuscript; 
         <a href="https://www.imdb.com/name/nm0223759/" target="_blank">Michael DiComo</a> for DCC integration feedback; 
         <a href="https://rubenwiersma.nl/" target="_blank">Ruben Wiersma</a> for proofreading and M.C. Escher Company communications; 
