--- a/proj_escher_tile.html
+++ b/proj_escher_tile.html
@@ -160,7 +160,7 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="https://example.com" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/Nowwin/escher-tile-deformer-examples/tree/main" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon"><i class="fab fa-github"></i></span>
                     <span>Example Code</span>
                   </a>
