--- a/proj_escher_tile.html
+++ b/proj_escher_tile.html
@@ -402,11 +402,11 @@
     <h2 class="title is-3">Acknowledgments</h2>
     <div class="content has-text-justified">
       <p>
-        We are grateful to 
+        We are deeply grateful to 
         <a href="https://noamaig.github.io/" target="_blank">Noam Aigerman</a> and 
         <a href="https://imagine.enpc.fr/~groueixt/" target="_blank">Thibault Groueix</a> 
         for their insightful discussions during the early stages of this project. 
-        We thank <a href="https://www.linkedin.com/in/abhichowdhury12/" target="_blank">Abhijeet Chowdhury</a> for helping accelerate the C++ implementation for ETech demo and Taiwei Cui for the help in improving the GUI. 
+        We thank <a href="https://www.linkedin.com/in/abhichowdhury12/" target="_blank">Abhijeet Chowdhury</a> for helping with ETech prep and Taiwei Cui for the help in improving the GUI. 
         We also appreciate 
         <a href="https://www.danbgoldman.com/home/" target="_blank">Dan B Goldman</a> and
         <a href="https://cs.stanford.edu/~asuter/" target="_blank">Alex Suter</a> for feedback on the manuscript; 
