--- a/proj_escher_tile.html
+++ b/proj_escher_tile.html
@@ -176,13 +176,14 @@
 
               <!-- Second row -->
               <div style="display: flex; gap: 10px; flex-wrap: wrap; justify-content: center;">
+
                 <span class="link-block">
-                  <a class="external-link button is-normal is-rounded is-dark" style="pointer-events:none; opacity:0.5;">
+                  <a href="./files/technical_paper_presentation.pdf" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon"><i class="fas fa-file-pdf"></i></span>
-                    <span>Slides (Coming Soon)</span>
+                    <span>Slides</span>
                   </a>
                 </span>
-
+                
                 <span class="link-block">
                   <a class="external-link button is-normal is-rounded is-dark" style="pointer-events:none; opacity:0.5;">
                     <span class="icon"><i class="fab fa-github"></i></span>
