--- a/proj_escher_tile.html
+++ b/proj_escher_tile.html
@@ -178,7 +178,7 @@
               <div style="display: flex; gap: 10px; flex-wrap: wrap; justify-content: center;">
 
                 <span class="link-block">
-                  <a href="./files/technical_paper_presentation.pdf" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://www.icloud.com/keynote/0dfUpaWEunLbH81FFAE48-PTg#technical%5Fpaper%5Fpresentation" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon"><i class="fas fa-file-pdf"></i></span>
                     <span>Slides</span>
                   </a>
